maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:6: error: 'case' expected but integer literal found.
      0 => if (!estFaceMur()){avance()}
      ^RandomMouseMaze:7: error: '}' expected but ';' found.
      1 => droite()
^RandomMouseMaze:7: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      1 => droite()
      ^RandomMouseMaze:8: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      2 => gauche()
      ^RandomMouseMaze:16: error: expected class or object definition
	def random3():Int = {
        ^RandomMouseMaze:23: error: eof expected but '}' found.
}
^