maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  while (!estSurBiscuit()){
    var nb : Int = random3() 
    nb match {
      0 => if (!estFaceMur()){avance()}
      1 => droite()
      2 => gauche()
    }
      
  }
  prendBiscuit()
}